data/derived/comb/progs/unify/prog1833.ml.out
Characters 50-63:
  let f' b' = f b in ( f, b' = b )
                     ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
